<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="passcode_password">Password</string>
    <string name="action_unlock">Unlock</string>
    <string name="action_lock">Lock</string>

    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="take_photo">Take photo</string>
    <plurals name="n_photos">
        <item quantity="one">1 photo</item>
        <item quantity="other">%1$d photos</item>
    </plurals>
    <string name="send">Send</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_name">Name</string>
    <string name="country">Country</string>
    <string name="send_code">Send activation code</string>
    <string name="check_code">Check activation code</string>
    <string name="activation_code">Activation code</string>
    <string name="we_will_send">We will send an SMS with a confirmation code to your phone number</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="we_ve_sent">We\'ve sent an SMS with an activation code to your phone number %1$s</string>
    <string name="hint_first_name">Fist name</string>
    <string name="hint_last_name">Last name (optional)</string>
    <string name="unknown_error">Unknown error</string>
    <string name="invalid_code">Activation code is not valid</string>
    <string name="invalid_code_empty">Activation code should not be empty</string>
    <string name="invalid_phone_number">Phone number is not valid</string>
    <string name="please_wait">Please wait</string>
    <string name="please_wait_flood">Flood. Please wait %1$s</string>
    <string name="choose_your_country">Choose your country</string>

    <string name="messages">Messages</string>
    <string name="waiting_for_connection">Waiting for connection…</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="logout">Log Out</string>
    <string name="Аудио">Audio</string>
    <string name="file">File</string>
    <string name="sticker">Sticker</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="geo">Location</string>
    <string name="contact">Contact</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="menu_lock">Lock</string>

    <string name="clear_history">Clear history</string>
    <string name="leave_group">Leave group</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <plurals name="group_chat_members">
        <item quantity="one">%1$d member</item>
        <item quantity="other">%1$d members</item>
    </plurals>
    <plurals name="group_chat_members_online">
        <item quantity="other">%1$d online</item>
    </plurals>
    <!--todo 0 members 0 online-->
    <!-- todo zeros members/online  look in original-->
    <string name="user_status_online">online</string>
    <!--<string name="user_status_offline">offline</string>-->
    <string name="user_status_last_week">last seen within a week</string>
    <string name="user_status_last_month">last seen within a month</string>
    <string name="user_status_recently">last seen recently</string>
    <string name="user_status_empty">last seen a long time ago</string>
    <string name="user_status_just_now">last seen just now</string>
    <string name="user_status_last_seen_word">last seen</string>
    <string name="user_status_last_today_at_word">today at</string>
    <string name="user_status_last_yesterday_at_word">yesterday at</string>

    <plurals name="user_status_last_seen_n_minutes_ago">
        <item quantity="one">last seen %1$d minute ago</item>
        <item quantity="other">last seen %1$d minutes ago</item>
    </plurals>

    <plurals name="user_status_last_seen_n_hours_ago">
        <item quantity="one">last seen %1$d hour ago</item>
        <item quantity="other">last seen %1$d hours ago</item>
    </plurals>

    <plurals name="user_status_last_seen_n_days_ago">
        <item quantity="one">last seen %1$d day ago</item>
        <item quantity="other">last seen %1$d days ago</item>
    </plurals>

    <!--<string name="user_status_last_seen">был в сети %1$d</string>-->
    <string name="user_status_last_seen">last seen %1$s</string>


    <string name="message_unsupported">Unsupported message</string>
    <string name="message_deleted">Deleted message</string>
    <string name="message_removed_group_photo">removed group photo</string>
    <string name="message_joined_by_link">joined the group via invite link</string>
    <string name="message_changed_group_photo">changed group photo</string>
    <string name="message_created_group">created group</string>
    <string name="message_renamed_group">renamed group</string>
    <string name="message_ivited">invited</string>
    <string name="message_kicked">kicked</string>
    <string name="message_kicked_self">has left the chat</string>
    <string name="empty_chat">No messages here yet…</string>
    <string name="hint_message_panel">Message</string>
    <string name="select_picture">Select Picture</string>

    <string name="deleted_account">Deleted account</string>

    <plurals name="n_new_messages">
        <item quantity="one">%1$d new message</item>
        <item quantity="other">%1$d new messages</item>
    </plurals>

    <string name="app_name">Telegram K</string>

    <string name="enter_your_password">Enter your password to unlock</string>
    <string name="enter_your_pincode">Enter your PIN to unlock</string>
    <string name="enter_your_pattern">Enter your pattern to unlock</string>
    <string name="enter_your_gesture">Draw your gesture to unlock</string>
    <string name="choose_your_password">Choose your password</string>
    <string name="choose_your_pin">Choose your PIN</string>
    <string name="choose_your_pattern">Choose your pattern</string>
    <string name="choose_your_gesture">Draw your gesture</string>
    <string name="choose_your_password_2">Re-enter your new password</string>
    <string name="choose_your_PIN_2">Re-enter your new PIN</string>
    <string name="choose_your_pattern_2">Re-enter your new pattern</string>

    <string name="menu_save_to_gallery">Save to gallery</string>
    <string name="menu_delete">Delete</string>

    <string name="call_phone">Call</string>
    <string name="copy_phone">Copy</string>
    <string name="item_type_mobile">Phone</string>
    <string name="item_type_username">Username</string>
    <string name="passcode_lock">Passcode Lock</string>
    <string name="passcode_disabled">Disabled</string>
    <string name="passcode_enabled">Enabled</string>
    <string name="edit_name">Edit name</string>
    <string name="passcode_how_to">When you set up an additional passcode, a lock icon will appear on the chats page. Tap it to lock and unlock your Telegram app.\n\nNote: if you forget the passcode, you\'ll need to delete and reinstall the app. All secretes chats will be lost.</string>
    <string name="passcode_timing_how_to">Require passcode if you away for a time</string>
    <string name="change_pass">Change Passcode</string>
    <string name="auto_lock">Auto-Lock</string>
    <string name="enter_passcode_menu">Enter passcode</string>
    <string name="password_cannot_be_empty">Password is too short</string>
    <string name="pin_cannot_be_empty">PIN is too short</string>
    <string name="pattern_cannot_be_empty">Pattern is too short</string>
    <string name="wrong_password">Wrong password</string>
    <string name="wrong_pattern">Wrong pattern</string>
    <string name="wrong_pin">Wrong PIN</string>
    <string name="autolock_disabled">Disabled</string>
    <string name="add_member">Add member</string>
    <string name="delete_and_leave">Delete and leave</string>
    <string name="notifications_enabled">Enabled</string>
    <string name="notifications_disabled">Disabled</string>
    <string name="menu_share">Share</string>
    <string name="menu_block">Block</string>
    <string name="menu_unblock">Unblock</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete_contact">Delete</string>
    <string name="feature_unsupported">The feature will be supported in next release.</string>
    <string name="web_page">Web page</string>
    <string name="user_status_bot">bot</string>
    <string name="what_the_bot_can_do">What this bot can do?</string>
    <string name="bot_about">About</string>
    <string name="bot_add_to_group">Add to group</string>
    <string name="select_group">Select group</string>
    <string name="slide_to_cancel">Slide to Cancel</string>
    <string name="message_voice">Voice</string>
    <string name="name_not_modified">Name not modified</string>
    <string name="chat_title">Chat title</string>
    <string name="first_name_must_be_non_empty">First name must be non-empty</string>
    <string name="playlist">Playlist</string>
    <string name="enter_your_pass">Please enter your personal password</string>
    <string name="password">Password</string>
    <string name="pin">PIN</string>
    <string name="sms_code">SMS code</string>
    <string name="shared_media_title">Shared Media</string>
    <string name="audio_files">Audio Files</string>
    <string name="passcode_title_password">Password</string>
    <string name="pattern">Pattern</string>
    <string name="gesture">Gesture</string>
    <plurals name="auto_lock_n_minutes">
        <item quantity="one">%1$d minute</item>
        <item quantity="other">%1$d minutes</item>
    </plurals>
    <plurals name="auto_lock_n_hour">
        <item quantity="one">%1$d hour</item>
        <item quantity="other">%1$d hours</item>
    </plurals>


    <plurals name="mute_for_n_hours">
        <item quantity="one">Mute for %1$d hour</item>
        <item quantity="other">Mute for %1$d hours</item>
    </plurals>

    <plurals name="mute_for_n_days">
        <item quantity="one">Mute for %1$d day</item>
        <item quantity="other">Mute for %1$d days</item>
    </plurals>

    <!--<plurals name="user_status_last_seen_n_minutes_ago">-->
    <!--<item quantity="one">last seen %1$d minute ago</item>-->
    <!--<item quantity="other">last seen %1$d minutes ago</item>-->
    <!--</plurals>-->

</resources>