<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
        >

    <item
            android:id="@+id/menu_mute"
            app:showAsAction="always"
            android:icon="@drawable/ic_notifications_on"
            android:title="Mute/Unmute"
            />
    <item
            android:id="@+id/menu_add_member"
            app:showAsAction="never"
            android:title="@string/add_member"
            />
    <item
            android:id="@+id/menu_edit_name"
            app:showAsAction="never"
            android:title="@string/edit_name"
            />

    <item
            android:id="@+id/menu_delete_and_leave"
            app:showAsAction="never"
            android:title="@string/delete_and_leave"
            />



</menu>