<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
        >

    <item
            android:id="@+id/menu_mute_unmute"
            app:showAsAction="always"
            android:icon="@drawable/ic_notifications_on"
            android:title="Mute/Unmute"
            />


    <item
            android:id="@+id/menu_share"
            app:showAsAction="never"
            android:title="@string/menu_share"
            />

    <item
            android:id="@+id/menu_block"
            app:showAsAction="never"
            android:title="@string/menu_block"
            />


    <item
            android:id="@+id/menu_delete"
            app:showAsAction="never"
            android:title="@string/menu_delete_contact"
            />


    <!--share-->
    <!--block-->
    <!--edit-->
    <!--delete-->

</menu>