<?xml version="1.0" encoding="utf-8"?>
<ru.korniltsev.telegram.profile.edit.passcode.EditPasscodeView xmlns:android="http://schemas.android.com/apk/res/android"
                                                               android:orientation="vertical"
                                                               android:layout_width="match_parent"
                                                               android:layout_height="match_parent"
                                                               android:background="#f1f1f1"

        >

    <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            />

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/ToolbarShadow"
            >
        <ScrollView android:layout_width="match_parent"
                    android:layout_height="match_parent">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <LinearLayout
                        android:id="@+id/btn_passcode_switcher"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@drawable/bg_keyboard_tab"
                        android:orientation="horizontal"
                        >
                    <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:text="@string/passcode_lock"
                            style="@style/EditPassCodeMainLabel"/>

                    <ru.korniltsev.telegram.common.view.AnimatedCheckbox
                            android:id="@+id/pass_code_enabled"
                            android:layout_width="38dp"
                            android:layout_height="22dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="16dp"/>
                </LinearLayout>
                <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="#e5e5e5"
                        />
                <TextView
                        android:id="@+id/btn_passcode_change"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:text="@string/change_pass"
                        android:background="@drawable/bg_keyboard_tab"
                        style="@style/EditPassCodeMainLabel"
                        />
                <View android:layout_width="match_parent"
                      android:layout_height="4dp"
                        android:background="@drawable/shadow_bottom"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#6d6d6d"
                        android:text="@string/passcode_how_to"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="16dp"

                        />
                <View
                        android:id="@+id/timing_shadow_top"
                        android:layout_width="match_parent"
                      android:layout_height="4dp"
                      android:background="@drawable/shadow_top"/>

                <LinearLayout
                        android:id="@+id/btn_passcode_timing"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@drawable/bg_keyboard_tab"
                        android:orientation="horizontal"
                        >
                    <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:text="@string/auto_lock"
                            style="@style/EditPassCodeMainLabel"/>

                    <TextView
                            android:id="@+id/btn_passcode_timing_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:textColor="#8A8A8A"
                            />
                </LinearLayout>
                <!--<TextView-->
                        <!--android:id="@+id/btn_passcode_timing"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="55dp"-->
                        <!--android:gravity="center_vertical"-->
                        <!--android:text="@string/auto_lock"-->
                        <!--android:background="@drawable/bg_keyboard_tab_white"-->
                        <!--style="@style/EditPassCodeMainLabel"-->
                        <!--/>-->
                <View
                        android:id="@+id/timing_shadow"
                        android:layout_width="match_parent"
                      android:layout_height="4dp"
                      android:background="@drawable/shadow_bottom"/>

                <TextView
                        android:id="@+id/timing_howto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#6d6d6d"
                        android:text="@string/passcode_timing_how_to"

                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"

                        />
            </LinearLayout>
        </ScrollView>


    </FrameLayout>

</ru.korniltsev.telegram.profile.edit.passcode.EditPasscodeView>