<?xml version="1.0" encoding="utf-8"?>
<ru.korniltsev.telegram.chat_list.ChatListView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/PathRoot"
        >

    <ru.korniltsev.telegram.audio.LinearLayoutWithShadow
            android:id="@+id/toolbar_shadow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:theme="@style/ToolBarStyle"
                app:popupTheme="@style/Theme.AppCompat.Light"
                android:background="?attr/colorPrimary"
                android:paddingRight="4dp"
                />


        <android.support.v7.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                />

    </ru.korniltsev.telegram.audio.LinearLayoutWithShadow>

    <LinearLayout
            android:layout_width="304dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="start"
            android:clickable="true"

            >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="148dp"
                android:orientation="vertical"
                android:background="@color/primary"
                >

            <ru.korniltsev.telegram.core.views.AvatarView
                    android:id="@+id/drawer_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:size="68dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    />

            <TextView
                    android:id="@+id/drawer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="18dp"
                    android:singleLine="true"
                    android:layout_marginTop="16dp"
                    />

            <ru.korniltsev.telegram.chat_list.view.MyPhoneView
                    android:id="@+id/drawer_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:layout_marginLeft="18dp"
                    />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/bg_white"
                android:orientation="vertical"
                android:paddingTop="4dp"
                >
            <!-- icon are stolen from official client :O -->
            <TextView
                    android:id="@+id/btn_contacts"
                    android:text="@string/contacts"
                    android:drawableLeft="@drawable/menu_contacts"
                    style="@style/DrawerButton"/>

            <TextView
                    android:id="@+id/btn_settings"
                    android:text="@string/settings"
                    android:drawableLeft="@drawable/ic_settings"
                    style="@style/DrawerButton"/>

            <TextView
                    android:id="@+id/btn_logout"
                    android:text="@string/logout"
                    android:drawableLeft="@drawable/ic_logout"
                    style="@style/DrawerButton"/>

        </LinearLayout>
    </LinearLayout>
</ru.korniltsev.telegram.chat_list.ChatListView>